<resources>
    <string name="app_name">consultants</string>
    <string name="msg_network_is_not_available">网络异常,请检查网络</string>
    <string name="msg_network_is_available">网络连接正常</string>
    <string name="permission_camera">App扫码需要用到拍摄权限</string>
    <string name="permission_external_storage">App需要用到读写权限</string>
    <string name="tips_scan_code">将二维码/条形码放入框内，即可自动扫描</string>
    <string name="qr_code">二维码</string>
    <string name="bar_code">条形码</string>
    <string name="permission_tips">销售家需要获取相关权限</string>
    <string name="logan_init">初始化日志成功</string>
    <string name="room_init">Room数据库创建成功</string>
    <string name="fragment_error">根布局不能为空</string>
    <string name="upload_pictures">上传头像</string>
    <string name="cancle">取消</string>
    <string name="cutter">裁剪</string>
    <string name="take_photo">拍照</string>
    <string name="albums">从相册中选择多张</string>
    <string name="albumsingle">从相册中选择单张并裁剪</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="sure">确定</string>
    <string name="success">成功</string>
    <string name="char_color52c6f6">#52c6f6</string>
    <string name="char_color2995ea">#2995ea</string>
    <string name="char_colorffdb4c">#ffdb4c</string>
    <string name="char_colorffb631">#ffb631</string>
    <string name="char_color9eea5e">#9eea5e</string>
    <string name="char_color81cd42">#81cd42</string>
    <string name="next">下一步</string>
    <string name="this_bug">这是一个bug</string>
    <string name="oldfile_delete">删除旧文件成功</string>
    <string name="copy_success">复制成功</string>
    <string name="send_data">可以传递数据</string>
    <string name="tips">提示</string>
    <string name="is_exit">确定退出应用?</string>
    <string name="del_data">删除数据</string>
    <string name="query_data">查询数据</string>
    <string name="home">Home</string>
    <string name="mine">My</string>
    <string name="modelleft">模块1</string>
    <string name="modelcenter">模块2</string>
    <string name="modelright">模块3</string>
    <string name="zxingcode">扫码</string>
    <string name="no_data">暂无内容</string>
    <string name="test_room">测试数据库Room</string>
    <string name="albums_choose">相册选择</string>
    <string name="sp_value">缓存值,设置缓存时间为5s后过期</string>
    <string name="write_sp">写入缓存</string>
    <string name="get_sp">获取缓存</string>
    <string name="login">登录</string>
    <string name="upgrade">升级到新版本</string>
    <string name="upgrade_info">1.生命不息，奋斗不止\n2.万物起于微乎，量变引发质变\n3.这是版本升级描述</string>
    <string name="upgrade_sure">立即升级</string>
    <string name="data_insert">增加一条数据</string>
    <string name="data_update">修改一条数据</string>
    <string name="data_del">删除一条数据</string>
    <string name="data_query">查询数据</string>
    <string name="fix">修复它</string>
    <string name="back">返回</string>
    <string name="loading">拼命加载中...</string>
    <string name="username">用户名</string>
    <string name="pwd">密码</string>
    <string name="test_memory">测试内存泄漏</string>
    <string name="tologin">跳转登录</string>
    <string name="change_url">切换baseUrl</string>
    <string name="time_picker">时间选择</string>
    <string name="share">分享</string>
    <string name="chart">图表</string>
    <string name="hotfix">热修复</string>
    <string name="time_count">倒计时</string>
    <string name="nothing">空白</string>
    <string name="total">资产总数</string>
    <string name="dialog">弹出</string>
    <string name="installs">安装</string>
    <string name="mockkt">跳转kotlin</string>
    <string name="kttile">kotlin</string>
    <string name="play_media">播放音频</string>
    <string name="play_media_sys">系统提示音</string>
    <string name="play_media_inter">自定义音频</string>
    <string name="not_find_card">检测不到手机内存卡</string>
    <string name="exit_app">再按一次退出</string>
    <!--图片选择-->
    <string name="selector_image">Photos</string>
    <string name="selector_send">Send</string>
    <string name="selector_preview">Preview</string>
    <string name="selector_select">Select</string>
    <string name="selector_image_num">%d </string>
    <string name="selector_all_image">All Photos</string>
    <string name="selector_this_today">This today</string>
    <string name="selector_this_week">This week</string>
    <string name="selector_this_month">This month</string>
    <string name="selector_confirm">Confirm</string>
    <string name="selector_cancel">Cancel</string>
    <string name="selector_hint">Hint</string>
    <string name="selector_permissions_hint">This album needs to be granted access to storage and photos, please go to Settings > App > Permissions to configure permissions.</string>

    <string name="fast_login">快捷登录</string>
    <string name="card_view">cardView</string>
    <string name="div_linear">自定义LinearLayout</string>
    <string name="decode_logan">logan解密转txt</string>
</resources>
