<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/upload_pictures"
            android:textColor="@color/color_999999"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/char_colore4e4e4" />

        <TextView
            android:id="@+id/cutter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/photo_choose"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/cutter"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/char_colore4e4e4" />

        <TextView
            android:id="@+id/take_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/photo_choose"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/take_photo"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/char_colore4e4e4" />

        <TextView
            android:id="@+id/albums"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/photo_choose"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/albums"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/char_colore4e4e4" />

        <TextView
            android:id="@+id/albumsingle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/photo_choose"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/albumsingle"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/char_colore4e4e4" />

        <TextView
            android:id="@+id/cancle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/photo_choose"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/cancle"
            android:textColor="@color/color_red"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>